--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>Student-site</title>
 </head>
 <body>
-      <h1>Hi! I am Sandesh</h1>
+      <h1>Hi! I am Sandesh Shinde</h1>
       I am learning web developmnt 
 </body>
 </html>
